--- a/index.html
+++ b/index.html
@@ -3,18 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Inequalities and Solving Linear Equations</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <div class="todo-container">
-        <h1>To-Do List</h1>
-        <div class="input-group">
-            <input type="text" id="taskInput" placeholder="Add a new task..." />
-            <button id="addTaskButton">Add Task</button>
-        </div>
-        <ul id="taskList"></ul>
-    </div>
-    <script src="script.js"></script>
+
+    <!-- Video Lecture Section -->
+    <section id="lecture">
+        <h1>Video Lecture: Inequalities and Solving Linear Equations</h1>
+        <iframe width="400" height="315" src="https://www.youtube.com/embed/mmg6wFPMdH8?si=HloeyTy576lJGmYs" 
+                title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+    </section>
+
+    <!-- Quiz Section -->
+    <section id="quiz">
+        <h2>Quiz: Inequalities and Solving Linear Equations</h2>
+        <form id="quizForm">
+            <div class="quiz-question">
+                <p>1. Solve the inequality: 3x - 7 > 8.</p>
+                <input type="radio" name="q1" value="A"> A. x > 5<br>
+                <input type="radio" name="q1" value="B"> B. x < 5<br>
+                <input type="radio" name="q1" value="C"> C. x > 3<br>
+                <span class="feedback" id="feedback1"></span>
+            </div>
+
+            <div class="quiz-question">
+                <p>2. Solve the equation: 2x + 5 = 11.</p>
+                <input type="radio" name="q2" value="A"> A. x = 3<br>
+                <input type="radio" name="q2" value="B"> B. x = 6<br>
+                <input type="radio" name="q2" value="C"> C. x = 4<br>
+                <span class="feedback" id="feedback2"></span>
+            </div>
+
+            <div class="quiz-question">
+                <p>3. Simplify and solve the inequality: 5x + 2 ≤ 3x + 8.</p>
+                <input type="radio" name="q3" value="A"> A. x ≤ 3<br>
+                <input type="radio" name="q3" value="B"> B. x ≥ 3<br>
+                <input type="radio" name="q3" value="C"> C. x ≤ -3<br>
+                <span class="feedback" id="feedback3"></span>
+            </div>
+
+            <div class="quiz-question">
+                <p>4. Solve the equation: 4x - 9 = 19.</p>
+                <input type="radio" name="q4" value="A"> A. x = 7<br>
+                <input type="radio" name="q4" value="B"> B. x = 5<br>
+                <input type="radio" name="q4" value="C"> C. x = 9<br>
+                <span class="feedback" id="feedback4"></span>
+            </div>
+
+            <div class="quiz-question">
+                <p>5. Solve the inequality: 6x + 2 < 14.</p>
+                <input type="radio" name="q5" value="A"> A. x < 2<br>
+                <input type="radio" name="q5" value="B"> B. x > 2<br>
+                <input type="radio" name="q5" value="C"> C. x < -2<br>
+                <span class="feedback" id="feedback5"></span>
+            </div>
+
+            <button type="submit">Submit Quiz</button>
+        </form>
+    </section>
+
+    <!-- Assignment Section -->
+    <section id="assignment">
+        <h2>Assignment</h2>
+        <p><strong>Assignment Question:</strong></p>
+        <p>Create a worksheet that involves solving 10 inequalities and linear equations. Provide detailed solutions to each problem, showing all necessary steps.</p>
+        <p>Please submit your assignment by sending an email to: <a href="mailto:mathbasics101@gmail.com">mathbasics101@gmail.com</a></p>
+        <p>If the link does not work, send your assignment manually to: mathbasics101@gmail.com</p>
+        <textarea id="assignmentInput" rows="6" placeholder="Write your assignment here..."></textarea>
+        <button id="submitAssignment" onclick="submitAssignment()">Submit Assignment</button>
+    </section>
+
+    <!-- Donation Section -->
+    <section id="donation">
+        <h2>PLEASE DONATE</h2>
+        <p>Account Number: 2032202001590</p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/GTBank_logo.svg/768px-GTBank_logo.svg.png" alt="GTBank Logo" width="150">
+        <p>Wave Mobile: 3709558</p>
+        <img src="https://s.rfi.fr/media/display/ed44f02a-c239-11ec-b0fc-005056bf8594/w:1280/p:16x9/wave-senegal-mobile-money.png" alt="Wave Mobile Logo" width="150">
+    </section>
+
+    <script src="script.js"></script> <!-- Link to external JS file -->
 </body>
 </html>
