--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
         <button id="submitAssignment" onclick="submitAssignment()">Submit Assignment</button>
     </section>
 
+    <!-- Progress Link Section -->
+    <section id="progress-link">
+        <h2>Ready for Advanced Mathematics?</h2>
+        <p>Test your mastery of Inequalities and Solving Linear Equations to unlock Level 5!</p>
+        <ul class="quiz-features">
+            <li>💯 Understand inequality symbols and rules</li>
+            <li>📊 Solve linear inequalities with confidence</li>
+            <li>🎯 Apply inequalities in real-world scenarios</li>
+            <li>✨ Access to advanced video lectures</li>
+        </ul>
+        <a href="https://mathquiz101.github.io/mathquiz4/" class="progress-button">Start Level 5 Inequalities Quiz</a>
+        <p class="quiz-note">📝 The quiz includes graphical representation of solutions!</p>
+    </section>
+
     <!-- Donation Section -->
     <section id="donation">
         <h2>PLEASE DONATE</h2>
